force-app/main/default/objects/Consent__c/Consent__c.object-meta.xml
<CustomObject>
    <label>Consent</label>
    <nameField>
        <displayFormat>CNST-{0000}</displayFormat>
        <label>Consent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>