force-app/main/default/objects/Consent__c/fields/Assister__c.field-meta.xml
<CustomField>
    <fullName>Assister__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assister</description>
    <label>Assister</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assisters</relationshipLabel>
    <relationshipName>ConsentsContact</relationshipName>
    <type>Lookup</type>
</CustomField>