force-app/main/default/objects/Consent__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client</description>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>ConsentsContactClient</relationshipName>
    <type>Lookup</type>
</CustomField>