force-app/main/default/objects/Consent__c/fields/ClientEmailProvided__c.field-meta.xml
<CustomField>
    <fullName>ClientEmailProvided__c</fullName>
    <label>Client Email Provided</label>
    <type>Email</type>
</CustomField>