force-app/main/default/objects/Consent__c/fields/ClientPhoneProvided__c.field-meta.xml
<CustomField>
    <fullName>ClientPhoneProvided__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Phone Provided</label>
    <length>20</length>
    <type>Text</type>
</CustomField>