force-app/main/default/objects/Consent__c/fields/ConsentLevel__c.field-meta.xml
<CustomField>
    <fullName>ConsentLevel__c</fullName>
    <description>Consent Level</description>
    <label>ConsentLevel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Assister</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>