force-app/main/default/objects/Consent__c/fields/ConsentProvidedBy__c.field-meta.xml
<CustomField>
    <fullName>ConsentProvidedBy__c</fullName>
    <label>Consent Provided By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>