force-app/main/default/objects/Consent__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The date the consent was ended or revoked</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>