force-app/main/default/objects/Consent__c/fields/ForOrganization__c.field-meta.xml
<CustomField>
    <fullName>ForOrganization__c</fullName>
    <formula>Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization</label>
    <type>Text</type>
</CustomField>