force-app/main/default/objects/Consent__c/fields/LastEmailDate__c.field-meta.xml
<CustomField>
    <fullName>LastEmailDate__c</fullName>
    <description>The last data and time the consent was requested previously for the client via email</description>
    <label>Last Email Date/Time</label>
    <type>DateTime</type>
</CustomField>