force-app/main/default/objects/Consent__c/fields/LastTextDate__c.field-meta.xml
<CustomField>
    <fullName>LastTextDate__c</fullName>
    <description>The last data and time the consent was requested previously for the client via text</description>
    <label>Last Text Date/Time</label>
    <type>DateTime</type>
</CustomField>