force-app/main/default/objects/Consent__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Organization</description>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>ConsentsAccount</relationshipName>
    <type>Lookup</type>
</CustomField>