force-app/main/default/objects/Consent__c/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <description>This field is associated to the date request by the CP user</description>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>