force-app/main/default/objects/Consent__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Start Date of associated action start</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>